- Cleaned up command formatting to consolidate slashes
- Added subroutines for centralized print/logging
- Added logfile and loglevel parameters to the config file
- Added logging feature
- Moved loglevel/verbose number validation into a seperate subroutine
- Added much more error checking on the config file
- Changed @snapshot_points to @backup_points for more consistent terminology

VERSION 1.0.10 (Jan 20 00:43 2004)
------------------------------------------------------------------------------
- Added link_dest option, to use the --link-dest flag with rsync
- Now checking the return values from rsync, with conditional syntax warning
  for --link-dest on older versions
- Added additional calls to syslog, to report rsync failures
- Now checking the return value of scripts called from backup_script
- Conditionalized the backup_interval() and rotate_interval() subroutines to
  only delete the oldest interval if we're keeping more than one of that
  interval
- Reformatted source code so it doesn't wrap (at 126 columns, or 1024x768)
- Shortened output when invoked with no args or from help to fix in 80 columns
- Changed rotate_interval() subroutine to simply move directories from lower
  intervals up instead of recursively copying hard links
- Added formatting subroutine to wrap all verbose command output at 80 columns

VERSION 1.0.9 (Jan 6 19:17 2004)
------------------------------------------------------------------------------
- Added backup_mysql.sh example script in utils/ to backup a MySQL database
- Added backup_smb_share.sh example script in utils/ to backup an SMB share
- Changed verbose settings internally to use numbers, instead of several
  arbitrary variables.
- Added optional "verbose" field to the config file, with values 1-5
- Fixed lockfile code to not run in test mode

VERSION 1.0.8 (Dec 26 12:56 2003)
------------------------------------------------------------------------------