@@ -15,6 +15,12 @@ VERSION 1.0.11 (? ? ??:?? 2004)
 - Moved loglevel/verbose number validation into a seperate subroutine
 - Added much more error checking on the config file
 - Changed @snapshot_points to @backup_points for more consistent terminology
+- Made all "-x" executable checks also check for "-f" file
+- Made rsync error messages report the full path to rsync and the correct
+  return value
+- Fixed minor screen formatting issue with print_cmd() subroutine where it
+  could line wrap the first element of a command
+- Changed exit error code from -1 (255) to 1, to be more standard
 
 VERSION 1.0.10 (Jan 20 00:43 2004)
 ------------------------------------------------------------------------------
